# resurvivBot

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt  snippet.py  template-config.json
cogs/: data.py  feedback.py  giveaway.py  gun.py  help.py  leaderboard.py  match.py  melee.py  ping.py  player.py  rules.py  say.py  sticky.py  ticket.py  topgg.py  twitch.py  update.py  vote.py  votes.json
