[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "survivstats2"
version = "0.1.0"
[tool.poetry.dependencies]
aiosqlite = "^0.13.0"
bs4 = "^0.0.1"
discord = "^1.0"
nest-asyncio = "^1.3"
python = "^3.8"
arsenic = "^19.1"
[tool.poetry.dev-dependencies]
